[#758] Eliminate "is_registered" filter
opentrials/opentrials#758
